--- a/_posts/python/3d-camera-controls/3d-camera-controls.ipynb
+++ b/_posts/python/3d-camera-controls/3d-camera-controls.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -95,13 +95,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~etpinard/3761.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11497.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -134,13 +134,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~etpinard/3763.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11499.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,13 +173,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~etpinard/3766.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11501.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -212,13 +212,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~etpinard/3767.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11503.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -251,13 +251,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~etpinard/3768.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11505.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -292,13 +292,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~etpinard/3772.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11507.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,273 +315,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"float:right; \\\">\n",
-    "    <img src=\"http://i.imgur.com/4vwuxdJ.png\" \n",
-    " align=right style=\"float:right; margin-left: 5px; margin-top: -10px\" />\n",
-    "</div>\n",
-    "\n",
-    "<h4 style=\"margin-top:60px;\"> Got Questions or Feedback? </h4>\n",
-    "\n",
-    "About <a href=\"https://plot.ly\" target=\"_blank\">Plotly</a>\n",
-    "\n",
-    "* email: feedback@plot.ly \n",
-    "* tweet: \n",
-    "<a href=\"https://twitter.com/plotlygraphs\" target=\"_blank\">@plotlygraphs</a>\n",
-    "\n",
-    "<h4 style=\"margin-top:30px;\">Notebook styling ideas</h4>\n",
-    "\n",
-    "Big thanks to\n",
-    "\n",
-    "* <a href=\"http://nbviewer.ipython.org/github/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers/blob/master/Prologue/Prologue.ipynb\" target=\"_blank\">Cam Davidson-Pilon</a>\n",
-    "* <a href=\"http://lorenabarba.com/blog/announcing-aeropython/#.U1ULXdX1LJ4.google_plusone_share\" target=\"_blank\">Lorena A. Barba</a>\n",
-    "\n",
-    "<br>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    div.cell{\n",
-       "        width: 850px;\n",
-       "        margin-left: 10% !important;\n",
-       "        margin-right: auto;\n",
-       "    }\n",
-       "    h1 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h1 {\n",
-       "        font-weight: 200;\n",
-       "        font-size: 40pt;\n",
-       "        line-height: 100%;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 0em;\n",
-       "        margin-top: 0em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    } \n",
-       "    h2 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "        text-indent:1em;\n",
-       "    }\n",
-       "    .text_cell_render h2 {\n",
-       "        font-weight: 200;\n",
-       "        font-size: 20pt;\n",
-       "        font-style: italic;\n",
-       "        line-height: 100%;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 1.5em;\n",
-       "        margin-top: 0.5em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    } \n",
-       "    h3 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h3 {\n",
-       "        font-weight: 300;\n",
-       "        font-size: 18pt;\n",
-       "        line-height: 100%;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 0.5em;\n",
-       "        margin-top: 2em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    }\n",
-       "    h4 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h4 {\n",
-       "        font-weight: 300;\n",
-       "        font-size: 16pt;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 0.5em;\n",
-       "        margin-top: 0.5em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    }\n",
-       "    h5 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h5 {\n",
-       "        font-weight: 300;\n",
-       "        font-style: normal;\n",
-       "        color: #1d3b84;\n",
-       "        font-size: 16pt;\n",
-       "        margin-bottom: 0em;\n",
-       "        margin-top: 1.5em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    }\n",
-       "    div.text_cell_render{\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "        line-height: 135%;\n",
-       "        font-size: 125%;\n",
-       "        width:750px;\n",
-       "        margin-left:auto;\n",
-       "        margin-right:auto;\n",
-       "        text-align:justify;\n",
-       "        text-justify:inter-word;\n",
-       "    }\n",
-       "    div.output_subarea.output_text.output_pyout {\n",
-       "        overflow-x: auto;\n",
-       "        overflow-y: scroll;\n",
-       "        max-height: 300px;\n",
-       "    }\n",
-       "    div.output_subarea.output_stream.output_stdout.output_text {\n",
-       "        overflow-x: auto;\n",
-       "        overflow-y: scroll;\n",
-       "        max-height: 300px;\n",
-       "    }\n",
-       "    div.output_subarea.output_html.rendered_html {\n",
-       "        overflow-x: scroll;\n",
-       "        max-width: 100%;\n",
-       "      /*  overflow-y: scroll; */\n",
-       "      /*  max-height: 300px;   */\n",
-       "    }\n",
-       "    code{\n",
-       "      font-size: 78%;\n",
-       "    }\n",
-       "    .rendered_html code{\n",
-       "        background-color: transparent;\n",
-       "        white-space: inherit;   \n",
-       "    }\n",
-       "    ul{\n",
-       "        /* color:#447adb; */  \n",
-       "        margin: 2em;\n",
-       "    }\n",
-       "    ul li{\n",
-       "        padding-left: 0.5em; \n",
-       "        margin-bottom: 0.5em; \n",
-       "        margin-top: 0.5em; \n",
-       "    }\n",
-       "    ul li li{\n",
-       "        padding-left: 0.2em; \n",
-       "        margin-bottom: 0.2em; \n",
-       "        margin-top: 0.2em; \n",
-       "    }\n",
-       "    ol{\n",
-       "        /* color:#447adb; */  \n",
-       "        margin: 2em;\n",
-       "    }\n",
-       "    ol li{\n",
-       "        padding-left: 0.5em; \n",
-       "        margin-bottom: 0.5em; \n",
-       "        margin-top: 0.5em; \n",
-       "    }\n",
-       "    /*.prompt{\n",
-       "        display: None;\n",
-       "    } */\n",
-       "    ul li{\n",
-       "        padding-left: 0.5em; \n",
-       "        margin-bottom: 0.5em; \n",
-       "        margin-top: 0.2em; \n",
-       "    }\n",
-       "    a:link{\n",
-       "       font-weight: bold;\n",
-       "       color:#447adb;\n",
-       "    }\n",
-       "    a:visited{\n",
-       "       font-weight: bold;\n",
-       "       color: #1d3b84;\n",
-       "    }\n",
-       "    a:hover{\n",
-       "       font-weight: bold;\n",
-       "       color: #1d3b84;\n",
-       "    }\n",
-       "    a:focus{\n",
-       "       font-weight: bold;\n",
-       "       color:#447adb;\n",
-       "    }\n",
-       "    a:active{\n",
-       "       font-weight: bold;\n",
-       "       color:#447adb;\n",
-       "    }\n",
-       "    .rendered_html :link {\n",
-       "       text-decoration: none; \n",
-       "    }\n",
-       "    .rendered_html :hover {\n",
-       "       text-decoration: none; \n",
-       "    }\n",
-       "    .rendered_html :visited {\n",
-       "      text-decoration: none;\n",
-       "    }\n",
-       "    .rendered_html :focus {\n",
-       "      text-decoration: none;\n",
-       "    }\n",
-       "    .rendered_html :active {\n",
-       "      text-decoration: none;\n",
-       "    }\n",
-       "    .warning{\n",
-       "        color: rgb( 240, 20, 20 )\n",
-       "    } \n",
-       "    hr {\n",
-       "      color: #f3f3f3;\n",
-       "      background-color: #f3f3f3;\n",
-       "      height: 1px;\n",
-       "    }\n",
-       "    blockquote{\n",
-       "      display:block;\n",
-       "      background: #f3f3f3;\n",
-       "      font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "      width:610px;\n",
-       "      padding: 15px 15px 15px 15px;\n",
-       "      text-align:justify;\n",
-       "      text-justify:inter-word;\n",
-       "      }\n",
-       "      blockquote p {\n",
-       "        margin-bottom: 0;\n",
-       "        line-height: 125%;\n",
-       "        font-size: 100%;\n",
-       "        text-align: center;\n",
-       "      }\n",
-       "   /* element.style {\n",
-       "    } */  \n",
-       "</style>\n",
-       "<script>\n",
-       "    MathJax.Hub.Config({\n",
-       "                        TeX: {\n",
-       "                           extensions: [\"AMSmath.js\"]\n",
-       "                           },\n",
-       "                tex2jax: {\n",
-       "                    inlineMath: [ [\"$\",\"$\"], [\"\\\\(\",\"\\\\)\"] ],\n",
-       "                    displayMath: [ [\"$$\",\"$$\"], [\"\\\\[\",\"\\\\]\"] ]\n",
-       "                },\n",
-       "                displayAlign: \"center\", // Change this to \"center\" to center equations.\n",
-       "                \"HTML-CSS\": {\n",
-       "                    styles: {\".MathJax_Display\": {\"margin\": 4}}\n",
-       "                }\n",
-       "        });\n",
-       "</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import display, HTML\n",
-    "import urllib2\n",
-    "url = 'https://raw.githubusercontent.com/plotly/python-user-guide/master/custom.css'\n",
-    "display(HTML(urllib2.urlopen(url).read()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
