Add graphs to subplots.
The subplots documentation page only had the code to generate the graphs. Now also has the graphs in iframes.

--- a/_posts/scala/2016-03-22-subplots.md
+++ b/_posts/scala/2016-03-22-subplots.md
@@ -31,18 +31,17 @@ val layout = RowLayout(2)
 
 val p = Plot()
   .layout(layout)
-  .withScatter(xsLeft, ysLeft,
-    ScatterOptions()
+  .withScatter(xsLeft, ysLeft, ScatterOptions()
       .onAxes(layout.ref(0)) // left subplot
       .mode(ScatterMode.Marker))
-  .withScatter(xsRight, ysRight,
-    ScatterOptions()
+  .withScatter(xsRight, ysRight, ScatterOptions()
       .onAxes(layout.ref(1)) // right subplot
-      .mode(ScatterMode.Marker)
-  )
+      .mode(ScatterMode.Marker))
 
 draw(p, "make-subplots", writer.FileOptions(overwrite=true))
 ```
+
+<iframe id="graph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~pbugnion/330.embed" height="525px" width="100%"></iframe>
 
 ## Subplots on a grid
 
