--- a/_posts/scala/2016-03-22-subplots.md
+++ b/_posts/scala/2016-03-22-subplots.md
@@ -8,7 +8,7 @@ thumbnail: thumbnail/subplots.jpg
 language: scala
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: multiple_axes
 order: 2
 ---
 
@@ -82,3 +82,5 @@ val p = Plot()
 
 draw(p, "subplots-grid", writer.FileOptions(overwrite=true))
 ```
+
+<iframe id="graph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~pbugnion/330.embed" height="525px" width="100%"></iframe>
