--- a/_posts/python/ternary/ternary.ipynb
+++ b/_posts/python/ternary/ternary.ipynb
@@ -301,7 +301,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'ternary.ipynb', 'python/ternary-plots', 'Python Ternary Plots | plotly',\n",
+    "    'ternary.ipynb', 'python/ternary-plots/', 'Python Ternary Plots | plotly',\n",
     "    'How to make Ternary plots in Python with Plotly.',\n",
     "    name = 'Ternary',\n",
     "    thumbnail='thumbnail/ternary.jpg', language='python',\n",
