edit ternary doc

--- a/_posts/python/ternary/ternary.ipynb
+++ b/_posts/python/ternary/ternary.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -116,14 +116,14 @@
     }
    ],
    "source": [
-    "import plotly.offline as py\n",
+    "from plotly.offline import init_notebook_mode, iplot, plot\n",
     "import plotly.graph_objs as go\n",
-    "py.init_notebook_mode()\n"
+    "init_notebook_mode()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"03cb386e-867e-42c7-9756-ba84fe7a584c\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"03cb386e-867e-42c7-9756-ba84fe7a584c\", [{\"a\": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], \"c\": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], \"b\": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], \"text\": [\"point 1\", \"point 2\", \"point 3\", \"point 4\", \"point 5\", \"point 6\", \"point 7\", \"point 8\", \"point 9\", \"point 10\", \"point 11\"], \"mode\": \"markers\", \"marker\": {\"color\": \"#DB7365\", \"symbol\": 100, \"line\": {\"width\": 2}, \"size\": 14}, \"type\": \"scatterternary\"}], {\"paper_bgcolor\": \"#fff1e0\", \"annotations\": [{\"y\": 1.3, \"text\": \"Simple Ternary Plot with Markers\", \"font\": {\"size\": 15}, \"showarrow\": false, \"x\": 0.5}], \"ternary\": {\"bgcolor\": \"#fff1e0\", \"sum\": 100, \"baxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Developer\", \"tickangle\": 45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"caxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Designer\", \"tickangle\": -45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"aaxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"Journalist\", \"tickangle\": 0, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"e8bc671b-5337-4c00-bb24-70d2f31f0b97\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e8bc671b-5337-4c00-bb24-70d2f31f0b97\", [{\"a\": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], \"c\": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], \"b\": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], \"text\": [\"point 1\", \"point 2\", \"point 3\", \"point 4\", \"point 5\", \"point 6\", \"point 7\", \"point 8\", \"point 9\", \"point 10\", \"point 11\"], \"mode\": \"markers\", \"marker\": {\"color\": \"#DB7365\", \"symbol\": 100, \"line\": {\"width\": 2}, \"size\": 14}, \"type\": \"scatterternary\"}], {\"paper_bgcolor\": \"#fff1e0\", \"annotations\": [{\"y\": 1.3, \"text\": \"Simple Ternary Plot with Markers\", \"font\": {\"size\": 15}, \"showarrow\": false, \"x\": 0.5}], \"ternary\": {\"bgcolor\": \"#fff1e0\", \"sum\": 100, \"baxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Developer\", \"tickangle\": 45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"caxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Designer\", \"tickangle\": -45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"aaxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"Journalist\", \"tickangle\": 0, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "py.iplot(fig, validate=False)"
+    "iplot(fig, validate=False)"
    ]
   },
   {
@@ -324,9 +324,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function plot in module plotly.offline.offline:\n",
+      "\n",
+      "plot(figure_or_data, show_link=True, link_text='Export to plot.ly', validate=True, output_type='file', include_plotlyjs=True, filename='temp-plot.html', auto_open=True)\n",
+      "    Create a plotly graph locally as an HTML document or string.\n",
+      "    \n",
+      "    Example:\n",
+      "    ```\n",
+      "    from plotly.offline import plot\n",
+      "    import plotly.graph_objs as go\n",
+      "    \n",
+      "    plot([go.Scatter(x=[1, 2, 3], y=[3, 2, 6])], filename='my-graph.html')\n",
+      "    ```\n",
+      "    More examples below.\n",
+      "    \n",
+      "    figure_or_data -- a plotly.graph_objs.Figure or plotly.graph_objs.Data or\n",
+      "                      dict or list that describes a Plotly graph.\n",
+      "                      See https://plot.ly/python/ for examples of\n",
+      "                      graph descriptions.\n",
+      "    \n",
+      "    Keyword arguments:\n",
+      "    show_link (default=True) -- display a link in the bottom-right corner of\n",
+      "        of the chart that will export the chart to Plotly Cloud or\n",
+      "        Plotly Enterprise\n",
+      "    link_text (default='Export to plot.ly') -- the text of export link\n",
+      "    validate (default=True) -- validate that all of the keys in the figure\n",
+      "        are valid? omit if your version of plotly.js has become outdated\n",
+      "        with your version of graph_reference.json or if you need to include\n",
+      "        extra, unnecessary keys in your figure.\n",
+      "    output_type ('file' | 'div' - default 'file') -- if 'file', then\n",
+      "        the graph is saved as a standalone HTML file and `plot`\n",
+      "        returns None.\n",
+      "        If 'div', then `plot` returns a string that just contains the\n",
+      "        HTML <div> that contains the graph and the script to generate the\n",
+      "        graph.\n",
+      "        Use 'file' if you want to save and view a single graph at a time\n",
+      "        in a standalone HTML file.\n",
+      "        Use 'div' if you are embedding these graphs in an HTML file with\n",
+      "        other graphs or HTML markup, like a HTML report or an website.\n",
+      "    include_plotlyjs (default=True) -- If True, include the plotly.js\n",
+      "        source code in the output file or string.\n",
+      "        Set as False if your HTML file already contains a copy of the plotly.js\n",
+      "        library.\n",
+      "    filename (default='temp-plot.html') -- The local filename to save the\n",
+      "        outputted chart to. If the filename already exists, it will be\n",
+      "        overwritten. This argument only applies if `output_type` is 'file'.\n",
+      "    auto_open (default=True) -- If True, open the saved file in a\n",
+      "        web browser after saving.\n",
+      "        This argument only applies if `output_type` is 'file'.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
