update ternary for python 3

--- a/_posts/python/ternary/ternary2examples.ipynb
+++ b/_posts/python/ternary/ternary2examples.ipynb
@@ -118,8 +118,17 @@
    "source": [
     "from plotly.offline import init_notebook_mode, iplot, plot\n",
     "import plotly.graph_objs as go\n",
-    "init_notebook_mode()\n",
-    "\n",
+    "init_notebook_mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "rawData = [\n",
     "    {'journalist':75,'developer':25,'designer':0,'label':'point 1'},\n",
     "    {'journalist':70,'developer':10,'designer':20,'label':'point 2'},\n",
@@ -143,12 +152,22 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "def makeAxis(title, tickangle): \n",
+    "    return {\n",
+    "      'title': title,\n",
+    "      'titlefont': { 'size': 20 },\n",
+    "      'tickangle': tickangle,\n",
+    "      'tickfont': { 'size': 15 },\n",
+    "      'tickcolor': 'rgba(0,0,0,0)',\n",
+    "      'ticklen': 5,\n",
+    "      'showline': True,\n",
+    "      'showgrid': True\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -157,10 +176,10 @@
     "data = [{ \n",
     "    'type': 'scatterternary',\n",
     "    'mode': 'markers',\n",
-    "    'a': [i for i in map(lambda x: x['journalist'], rawData)],\n",
-    "    'b': [i for i in map(lambda x: x['developer'], rawData)],\n",
-    "    'c': [i for i in map(lambda x: x['designer'], rawData)],\n",
-    "    'text': [i for i in map(lambda x: x['label'], rawData)],\n",
+    "    'a': map(lambda x: x['journalist'], rawData),\n",
+    "    'b': map(lambda x: x['developer'], rawData),\n",
+    "    'c': map(lambda x: x['designer'], rawData),\n",
+    "    'text': map(lambda x: x['label'], rawData),\n",
     "    'marker': {\n",
     "        'symbol': 100,\n",
     "        'color': '#DB7365',\n",
